--- a/Assets/style.css
+++ b/Assets/style.css
@@ -100,17 +100,23 @@
     margin: 10px;
     padding-left: 20px;
 }
+
 .forecast-cards {
     border: 2px dashed black;
     margin: 10px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .five-day-cards {
     border: 2px dashed green;
     margin: 10px;
-    padding: 0px 30px;
+    padding: 0px 25px;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+}
+
+.five-day-cards p {
+    margin: 10px
 }
