--- a/style.css
+++ b/style.css
@@ -19,13 +19,14 @@
 .search-container {
     border: 2px dashed darkgoldenrod;
     display: flex;
-    /* flex-grow: 1; */
+    flex-grow: 1;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     /*YOU WILL NEED TO CHANGE THIS PROBABLY*/
     /* width: 400px; */
     margin: 20px;
+    padding: 10px;
 }
 
 .search-title {
@@ -44,14 +45,23 @@
 .divider {
     border-bottom: 5px solid black;
     border-radius: 25px;
-    width: 350px;
+    width: 75%;
     margin: 10px;
+}
+
+
+.saved-city {
+    cursor: pointer;
+}
+
+.saved-city:hover {
+    cursor: pointer;
 }
 
 .current-city-container {
     border: 2px dashed blue;
     margin: 20px;
-    flex-grow: 5;
+    flex-grow: 2;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
