--- a/style.css
+++ b/style.css
@@ -1,23 +1,42 @@
+:root {
+    --background-color: #EFF5FF;
+    --light-blue: #9EB8D9;
+    --dark-blue: #7C93C3;
+    --accent: #A25772;
+}
+
+html {
+    background-color: var(--background-color);
+}
+
 .header {
-    border: 2px dashed red;
+    border: 2px solid black;
     display: flex;
     justify-content: center;
+    background-color: var(--dark-blue);
+    border-radius: 25px;
+}
+
+.title {
+    color: var(--background-color);
+    text-shadow: 1px 1px 2px black;
 }
 
 .main {
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     margin-top: 10px;
     /* display: flex; */
 }
 
 .container {
-    border: 2px dashed purple;
+    /* border: 2px dashed purple; */
     margin: 10px;
     display: flex;
 }
 
 .search-container {
-    border: 2px dashed darkgoldenrod;
+    border: 2px solid var(--accent);
+    border-radius: 25px;
     display: flex;
     flex-grow: 1;
     flex-direction: column;
@@ -25,21 +44,38 @@
     align-items: center;
     /*YOU WILL NEED TO CHANGE THIS PROBABLY*/
     /* width: 400px; */
-    margin: 20px;
+    /* margin: 20px; */
     padding: 10px;
 }
 
 .search-title {
-
+    font-size: 32px;
 }
 
 .city-search {
     margin-bottom: 10px;
     border: 1px solid black;
+    width: 75%;
+    height: 12px;
+    padding: 10px;
+    font-size: 15px;
 }
 
 .submit-btn {
     margin: 10px;
+    background-color: var(--dark-blue);
+    width: 75%;
+    border-radius: 25px;
+    box-shadow: none;
+    border: 2px solid var(--light-blue);
+    cursor: pointer;
+    color: var(--background-color);
+    text-shadow: 1px 1px 2px black;
+    font-size: 20px;
+}
+
+.submit-btn:hover {
+    cursor: pointer;
 }
 
 .divider {
@@ -49,9 +85,23 @@
     margin: 10px;
 }
 
+.search-history-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .saved-city {
+    display: inline-block;
+    margin: 10px;
+    background-color: var(--light-blue);
+    box-shadow: none;
+    border: 2px dashed var(--dark-blue);
     cursor: pointer;
+    color: var(--background-color);
+    text-shadow: 1px 1px 2px black;
+    font-size: 20px;
+    width: 100%;
 }
 
 .saved-city:hover {
@@ -59,26 +109,28 @@
 }
 
 .current-city-container {
-    border: 2px dashed blue;
-    margin: 20px;
+    /* border: 2px dashed blue; */
+    margin-left: 20px;
     flex-grow: 2;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .current-day-container {
-    border: 2px dashed green;
-    margin: 10px;
+    border: 2px solid var(--accent);
+    border-radius: 25px;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: column;
 }
 
 .date-container {
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     display: flex;
-    margin: 10px;
+    margin: 10px 0 0 10px;
     align-items: center;
+    font-size: 20px;
 }
 
 .current-date {
@@ -88,46 +140,41 @@
 }
 
 .info-container {
-    border: 2px dashed red;
-    margin: 10px;
+    /* border: 2px dashed red; */
+    margin: 0 0 0 10px;
     display: flex;
     flex-direction: column;
     padding-left: 20px;
+    font-size: 18px;
 }
 
 .forecast-container {
-    border: 2px dashed green;
-    margin: 10px;
-}
-
-.forcast-title-container {
-    border: 2px dashed darkblue;
-    margin: 10px;
+    border: 2px solid var(--accent);
+    border-radius: 25px;    
 }
 
 .forecast-title {
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     margin: 10px;
     padding-left: 20px;
 }
 
 .forecast-cards {
-    border: 2px dashed red;
+    /* border: 2px dashed red; */
     margin: 10px;
     display: flex;
     justify-content: space-evenly;
 }
 
 .five-day-cards {
-    border: 2px solid black;
+    border: 5px solid var(--dark-blue);
+    background-color: var(--accent);
+    color: var(--background-color);
     border-radius: 25px;
-    margin: 10px;
+    margin: 15px 0;
     padding: 0px 25px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
 
-.five-day-cards p {
-    margin: 10px
-}
